# applied_project_cluster

./: .gitignore  README.md  image-automation.yml  npc.yml  versions.yml  vmware.yml
.github/workflows/: build-images.yml  build-npc-ui.yml  build-openclaw.yml  build-vmware-gateway.yml
chart/: README.md  values.yaml
chart/templates/: agent.yaml  controller.yaml  matrix.yaml  vmware-gateway.yaml
charts/: README.md  values.yaml
charts/npc/: README.md
charts/templates/: agent.yaml  controller.yaml  vmware-gateway.yaml
controller/backend/: Cargo.toml
controller/backend/src/: main.rs  scale.rs  tasks.rs  vms.rs
controller/frontend/src/: App.tsx
flux-system/: gotk-sync.yaml  kustomization.yaml
flux-system/image-automation/: image-automation.yml  kustomization.yaml
manifests/: kustomization.yml
manifests/agent/: deployment.yml  service.yml
manifests/config/: configmap.yml  kustomization.yml
manifests/storage/: kustomization.yml  pvc.yml
manifests/vmware-gateway/: deployment.yml  kustomization.yml  service.yml
npc_ui/: Dockerfile  README.md
npc_ui/backend/: Cargo.toml
npc_ui/backend/src/: main.rs
npc_ui/frontend/src/: App.css  App.tsx  index.css
openclaw/: openclaw.json
openclaw/workspace-build/: AGENT.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
openclaw/workspace-build/skills/vmware-vm-operator/: SKILL.md  vmware_operator.py
scripts/: sync-versions-to-helm.sh  update-manifests.sh
system/: agent.yml  controller.yml  dev-npc.yaml  loadbalancer-dev.yaml  matrix.yml  metallb-dev.yaml  metallb-prod.yaml  npc-app.yaml  npc.yml  vmware.yml
system/argocd/: controller-loadbalancer.yaml  dev-npc.yaml  prod-npc.yaml
system/dev/: application.yml  ipaddresspool.yml  service.yml
system/prod/: application.yml  ipaddresspool.yml  service.yml
vmware_gateway/: Dockerfile  README.md  main.py
