[package]
name = "npc-ui-backend"
version = "0.1.0"
edition = "2021"
description = "Backend API for NPC UI"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
matrix-sdk = { version = "0.9", default-features = false, features = ["rustls-tls"] }
matrix-sdk-base = { version = "0.9", default-features = false }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
